--- a/src/Card.css
+++ b/src/Card.css
@@ -20,7 +20,7 @@
     text-decoration: none;
     font-size: 14px;
     padding: 5px 15px;
-    background-color: rgb(49, 206, 49);
+    background-color: #67db67;
     color: black;
     border-radius: 5px;
     border: 1px solid darkgreen;
