--- a/src/Button.css
+++ b/src/Button.css
@@ -21,14 +21,16 @@
 }
 
 button:disabled {
-    opacity: 0.6;
+    opacity: 0.5;
     pointer-events: none;
 }
 
 button:hover {
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2)
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
 }
 
 button:active {
     transform: scale(0.98);
+    cursor: pointer;
 }
