--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   margin: 0 auto;
 }
 
+h1 {
+  color: #333;
+  font-weight: 800;
+  font-size: 40px;
+}
+
 .library-container {
   display: flex;
   flex-direction: column;
@@ -25,6 +31,7 @@
   padding-bottom: 30px;
   border: 1px solid gray;
   border-radius: 10px;
+  background-color: white;
 }
 
 .alerts {
@@ -46,7 +53,6 @@
 }
 
 h2, h3 {
-  font-weight: 500;
   color: #333;
 }
 
