--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,7 @@
 h1 {
   color: #333;
   font-weight: 800;
-  font-size: 40px;
-}
-
-.library-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  text-align: center;
 }
 
 .library {
@@ -21,17 +15,20 @@ h1 {
   align-items: center;
   gap: 30px;
   margin: 20px;
+  padding-bottom: 20px;
 }
 
 .component-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 40%;
+  width: 100%; 
   padding-bottom: 30px;
   border: 1px solid gray;
   border-radius: 10px;
   background-color: white;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .alerts {
@@ -61,6 +58,15 @@ h2, h3 {
   font-weight: 500;
 } 
 
+@media(min-width: 1008px) {
+  .component-container {
+    width: 40%;
+  }
+
+  h1 {
+    font-size: 40px;
+  }
+}
 
 
 
